test_suite/tests/ui/fail/invalid_attr_value_path/invalid_with_usage_path.rs
use clapi::macros::*;

#[command(with_usage="some_fn")]
fn test(){}

fn main(){}