test_suite/tests/ui/fail/invalid_attr_value_path/invalid_with_usage_path.stderr
error[E0425]: cannot find function `some_fn` in this scope
 --> $DIR/invalid_with_usage_path.rs:3:1
  |
3 | #[command(with_usage="some_fn")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
